# CoffeeDelivery

./: .gitignore  pyproject.toml
src/order_service/domain/: model.py
src/order_service/service_layer/: __init__.py  services.py
src/product_service/: config.py
src/product_service/domain/: __init__.py  model.py  models.py
src/product_service/infrastructure/entrypoints/rest_api/: app.py
src/product_service/infrastructure/entrypoints/rest_api/products/: __init__.py  serializers.py  views.py
src/product_service/infrastructure/storage/orm/: database.py  models.py  orm_types.py
src/product_service/service_layer/: __init__.py  services.py
src/tests/: conftest.py
src/tests/e2e/infrastructure/entrypoints/product/: test_get_product.py
src/tests/integration/infrastructure/storage/orm/: test_product_model.py
src/tests/order_service/service_layer/unit/: test_place_order.py
src/tests/product_service/service_layer/unit/: test_add_product.py
src/tests/unit/service_layer/unit/: test_add_product.py
src/tests/unit/settings/: test_get_settings.py
