[tool.poetry]
name = "coffee-delivery"
version = "0.1.0"
description = ""
authors = ["Evgeny Kungurov <johnk2280@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
# plugins = [
#     "pydantic.mypy"
# ]
strict = true
ignore_missing_imports = true