[tool.poetry]
name = "coffee-delivery"
version = "0.1.0"
description = ""
authors = ["Evgeny Kungurov <johnk2280@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "backend"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test", "*_test.py", "*_tests.py", "test_*.py"]

[tool.mypy]
python_version = "3.12"
# plugins = [
#     "pydantic.mypy"
# ]
strict = true
ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 80
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "COM", "RET", "SIM", "ARG", "PTH", "TD", "RUF", "N"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["COM812"]
unfixable = ["B", "RUF001"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"

indent-style = "space"

skip-magic-trailing-comma = true

line-ending = "auto"